--- a/m3u8.html
+++ b/m3u8.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div id="a1" style="psotion:relative;"></div>
-<script type="text/javascript" src="https://zuidajiexi.net/ldg_ckplayer/ckplayer.js" charset="utf-8"></script>
+<script type="text/javascript" src="./ckplayer/ckplayer.v.js" charset="utf-8"></script>
 <script type="text/javascript">
 function GetQueryString(name)
 {
