--- a/m3u8.html
+++ b/m3u8.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>天源视频解析vpi.3vkj.net.m3u8解析</title>
+<title>天源云视频解析https://tfpak.github.io/v/m3u8.html .m3u8解析</title>
 <style type="text/css">body,html,div{padding: 0;margin: 0;width:100%;height:100%;psotion:relative;"}</style>
 </head>
 <body>
