--- a/css/play.html
+++ b/css/play.html
@@ -8,7 +8,7 @@
 <title>唐门免费解析</title>
 <style type="text/css">body,html,.content{background-color:black;padding: 0;margin: 0;width:100%;height:100%;color:#999;}</style>
 <script src="//apps.bdimg.com/libs/jquery/1.11.3/jquery.min.js"></script>
-<script type="text/javascript" src="https://tfpak.github.io/ckplayer/ckplayer.v.js" charset="utf-8"></script>
+<script type="text/javascript" src="https://tfpak.github.io/v/ckplayer/ckplayer.v.js" charset="utf-8"></script>
 <link rel="stylesheet" href="//cdn.bootcss.com/dplayer/1.5.1/DPlayer.min.css">
 <script type="text/javascript" src="//cdn.bootcss.com/dplayer/1.5.1/DPlayer.min.js" charset="utf-8"></script>
 <script type="text/javascript" src="//cdn.bootcss.com/hls.js/0.8.4/hls.min.js"></script>
