--- a/css/m3u8.html
+++ b/css/m3u8.html
@@ -5,15 +5,15 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="renderer" content="webkit">
 <meta http-equiv="X-UA-Compatible" content="IE=11" />
-<title>33UU免费解析</title>
+<title>唐门免费解析</title>
 <style type="text/css">body,html,.content{background-color:black;padding: 0;margin: 0;width:100%;height:100%;color:#999;}</style>
-<script src="./js/jquery.min.js"></script>
-<script type="text/javascript" src="./ckplayer/ckplayer.js" charset="utf-8"></script>
-<link rel="stylesheet" href="./css/DPlayer.min.css">
-<script type="text/javascript" src="//cdn.bootcss.com/dplayer/1.5.1/DPlayer.min.js" charset="utf-8"></script>
-<script type="text/javascript" src="//cdn.bootcss.com/hls.js/0.8.4/hls.min.js"></script>
-<script type="text/javascript" src="//cdn.bootcss.com/blueimp-md5/2.10.0/js/md5.min.js"></script>
-<script type="text/javascript" src="./js/tools.js?ver=20171118"></script>
+<script src="https://tfpak.github.io/v/css/js/jquery.min.js"></script>
+<script type="text/javascript" src="https://tfpak.github.io/v/ckplayer/ckplayer.v.js" charset="utf-8"></script>
+<link rel="stylesheet" href="https://tfpak.github.io/v/css/DPlayer.min.css">
+<script type="text/javascript" src="./v/css/dplayer/1.5.1/DPlayer.min.js" charset="utf-8"></script>
+<script type="text/javascript" src="./v/css/hls.js/0.8.4/hls.min.js"></script>
+<script type="text/javascript" src="./v/css/md5/2.10.0/js/md5.min.js"></script>
+<script type="text/javascript" src="./v/tools.js?ver=20171118"></script>
 </head>
 <body style="overflow-y:hidden;">
 <div id="loading" class="content" style="font-weight:bold;padding-top:90px;" align="center">正在加载播放中,请稍等...</div>
@@ -39,9 +39,9 @@ if(vid.indexOf('.m3u8')>0){
 				}
 			});
 		}else{
-			var flashvars={f:'/videojx/ckplayer/m3u8.swf',a:vid,c:0,s:4,lv:0,p:1,v:100,b:1,e:0,my_title:GetQueryString('title')};
+			var flashvars={f:'./v/css/m3u8.swf',a:vid,c:0,s:4,lv:0,p:1,v:100,b:1,e:0,my_title:GetQueryString('title')};
 			var params={bgcolor:'#FFF',allowFullScreen:true,allowScriptAccess:'always',wmode:'transparent'};
-			CKobject.embedSWF('ckplayer/ckplayer.swf','a1','ckplayer_a1','100%','100%',flashvars,params);
+			CKobject.embedSWF('./v/ckplayer/ckplayer.swf','a1','ckplayer_a1','100%','100%',flashvars,params);
 		}
 	}
 }else{
