--- a/css/m3u8.html
+++ b/css/m3u8.html
@@ -10,10 +10,10 @@
 <script src="https://tfpak.github.io/v/css/js/jquery.min.js"></script>
 <script type="text/javascript" src="https://tfpak.github.io/v/ckplayer/ckplayer.v.js" charset="utf-8"></script>
 <link rel="stylesheet" href="https://tfpak.github.io/v/css/DPlayer.min.css">
-<script type="text/javascript" src="./v/css/dplayer/1.5.1/DPlayer.min.js" charset="utf-8"></script>
-<script type="text/javascript" src="./v/css/hls.js/0.8.4/hls.min.js"></script>
-<script type="text/javascript" src="./v/css/md5/2.10.0/js/md5.min.js"></script>
-<script type="text/javascript" src="./v/tools.js?ver=20171118"></script>
+<script type="text/javascript" src="/v/css/dplayer/1.5.1/DPlayer.min.js" charset="utf-8"></script>
+<script type="text/javascript" src="/v/css/hls.js/0.8.4/hls.min.js"></script>
+<script type="text/javascript" src="/v/css/md5/2.10.0/js/md5.min.js"></script>
+<script type="text/javascript" src="/v/tools.js?ver=20171118"></script>
 </head>
 <body style="overflow-y:hidden;">
 <div id="loading" class="content" style="font-weight:bold;padding-top:90px;" align="center">正在加载播放中,请稍等...</div>
