--- a/css/m3u8.html
+++ b/css/m3u8.html
@@ -7,7 +7,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=11" />
 <title>唐门免费解析</title>
 <style type="text/css">body,html,.content{background-color:black;padding: 0;margin: 0;width:100%;height:100%;color:#999;}</style>
-<script src="https://tfpak.github.io/v/css/js/jquery.min.js"></script>
+<script src="https://tfpak.github.io/v/css/jquery.min.js"></script>
 <script type="text/javascript" src="https://tfpak.github.io/v/ckplayer/ckplayer.v.js" charset="utf-8"></script>
 <link rel="stylesheet" href="https://tfpak.github.io/v/css/DPlayer.min.css">
 <script type="text/javascript" src="/v/css/dplayer/1.5.1/DPlayer.min.js" charset="utf-8"></script>
