--- a/css/m3u8.html
+++ b/css/m3u8.html
@@ -41,7 +41,7 @@ if(vid.indexOf('.m3u8')>0){
 		}else{
 			var flashvars={f:'/v/css/m3u8.swf',a:vid,c:0,s:4,lv:0,p:1,v:100,b:1,e:0,my_title:GetQueryString('title')};
 			var params={bgcolor:'#FFF',allowFullScreen:true,allowScriptAccess:'always',wmode:'transparent'};
-			CKobject.embedSWF('/v/ckplayer/ckplayer.swf','a1','ckplayer_a1','100%','100%',flashvars,params);
+			CKobject.embedSWF('ckplayer/ckplayer.swf','a1','ckplayer_a1','100%','100%',flashvars,params);
 		}
 	}
 }else{
